# TP-Final-Taller-1-Argentum

./: .gitignore  Argentum.cpp  Argentum.h  AttackResult.h  CMakeLists.txt  Calculator.cpp  Calculator.h  ConfigFileReader.cpp  ConfigFileReader.h  Configuration.cpp  Configuration.h  Direction.h  FileReader.cpp  FileReader.h  Font.cpp  Font.h  Game.cpp  Game.h  GameConstants.h  LICENSE  Map.cpp  Map.h  MapFileReader.cpp  MapFileReader.h  Mensajes.txt  MonstersFactory.cpp  MonstersFactory.h  NPC.cpp  NPC.h  NPCTexture.cpp  NPCTexture.h  Player.cpp  Player.h  PlayerTexture.cpp  PlayerTexture.h  README.md  SDLException.h  Sounds.cpp  Sounds.h  TPException.h  (+14 more)
Character/: CMakeLists.txt  Entity.cpp  Entity.h  NPC.cpp  NPC.h  Player.cpp  Player.h
Map/: CMakeLists.txt  Coordinate.h  InverseCoordinateDistance.cpp  InverseCoordinateDistance.h  ItemDrop.cpp  ItemDrop.h  Map.cpp  Map.h  PointAndDistance.h  Structure.cpp  Structure.h  Tile.cpp  Tile.h
Tests/: CMakeLists.txt  EntityTests.cpp  EntityTests.h  ItemTests.cpp  ItemTests.h  MapTests.cpp  MapTests.h  entity_tests.cpp  item_tests.cpp  map_tests.cpp  tests.cpp
Texture/: CMakeLists.txt  EntityTexture.cpp  EntityTexture.h  NPCTexture.cpp  NPCTexture.h  PlayerEquipment.h  PlayerTexture.cpp  PlayerTexture.h  Texture.cpp  Texture.h  TextureID.h  TextureRepository.cpp  TextureRepository.h
clientSide/: CMakeLists.txt  MapFileReader.cpp  client.supp  clientMain.cpp  map.json
clientSide/Character/: CMakeLists.txt  Entity.cpp  Entity.h  NPC.cpp  NPC.h  Player.cpp  Player.h
clientSide/Client/: ArgentumClient.cpp  ArgentumClient.h  ArgentumClientSide.cpp  ArgentumClientSide.h  BlockingQueue.hpp  CMakeLists.txt  CitizenData.h  ClientEventHandler.cpp  ClientEventHandler.h  ClientProtocol.cpp  ClientProtocol.h  EntityData.h  GameConstants.h  GameGUI.cpp  GameGUI.h  GameInitializer.cpp  GameInitializer.h  ProtocolEnumTranslator.cpp  ProtocolEnumTranslator.h  Update.cpp  Update.h  UpdateManager.cpp  UpdateManager.h  UpdateQueue.hpp  UpdateReceiver.cpp  UpdateReceiver.h
clientSide/Client/InputCommands/: BuyCommand.cpp  BuyCommand.h  CMakeLists.txt  CommandVerifier.cpp  CommandVerifier.h  DepositCommand.cpp  DepositCommand.h  DropCommand.cpp  HealCommand.cpp  HealCommand.h  InputCommand.h  ListCommand.cpp  MeditateCommand.cpp  MeditateCommand.h  MessageToPlayerCommand.cpp  PickUpCommand.h  RequestInventoryNamesCommand.cpp  RequestInventoryNamesCommand.h  WithdrawCommand.cpp
clientSide/Graphics/: CMakeLists.txt  Selector.cpp  Selector.h
clientSide/Graphics/GUI/: GUIPlayerInfo.h  PlayerInfoGUI.cpp  PlayerInfoGUI.h  PlayerInventoryGUI.cpp  PlayerInventoryGUI.h  PlayerStats.h
clientSide/Graphics/Minichat/: Minichat.cpp  Minichat.h
clientSide/Graphics/Sound/: Sound.cpp  Sound.h  SoundPlayer.h  SoundRepository.cpp  SoundRepository.h
clientSide/Graphics/Text/: Font.cpp  Font.h  Text.cpp  Text.h
clientSide/Map/: CMakeLists.txt  Coordinate.h  ItemDrop.cpp  ItemDrop.h  Map.cpp  Map.h  Structure.cpp  Structure.h  Tile.cpp  Tile.h
clientSide/Miscellaneous/: Arrow.cpp  Arrow.h  CMakeLists.txt  CameraCollisionVerifier.cpp  CameraCollisionVerifier.h  Spell.cpp  Spell.h
clientSide/Screen/: CMakeLists.txt  MainMenu.cpp  MainMenu.h  Window.cpp  Window.h
clientSide/Sound/: CMakeLists.txt  Sound.cpp  Sound.h  SoundPlayer.cpp  SoundPlayer.h  SoundRepository.cpp  SoundRepository.h
clientSide/Spells/: Spell.cpp  Spell.h
clientSide/Texture/: CMakeLists.txt  EntityTexture.cpp  EntityTexture.h  NPCTexture.cpp  NPCTexture.h  PlayerEquipment.h  PlayerTexture.cpp  PlayerTexture.h  Texture.cpp  Texture.h  TextureID.h  TextureRepository.cpp  TextureRepository.h
clientSide/UpdateEvents/: CMakeLists.txt  UpdateAttack.cpp  UpdateAttack.h  UpdateCreateItem.cpp  UpdateCreateItem.h  UpdateCreateNPC.cpp  UpdateCreatePlayer.cpp  UpdateCreatePlayer.h  UpdateDestroyItem.cpp  UpdateDestroyItem.h  UpdateEquip.cpp  UpdateEquip.h  UpdateEvent.h  UpdateGUI.cpp  UpdateLevelUp.cpp  UpdateLevelUp.h  UpdateMove.h  UpdatePlayerDeath.cpp  UpdatePlayerDeath.h  UpdatePlayerResurrect.h  UpdateRemoveEntity.cpp  UpdateRemoveEntity.h  UpdateTeleportEntity.cpp  UpdateTeleportEntity.h
serverSide/: CMakeLists.txt  NonModifiableConstants.h  README.md  server.supp  serverMain.cpp
serverSide/Config/: CMakeLists.txt  Calculator.cpp  Calculator.h  ConfigFileReader.cpp  ConfigFileReader.h  Configuration.cpp  Configuration.h  MapFileReader.cpp  MapFileReader.h  config.json  indexFile  json.hpp  map.json  saveFile
serverSide/Entities/: AttackResult.h  CMakeLists.txt  Entity.cpp  Entity.h  Minichat.h  Monster.cpp  Monster.h  MonsterStats.cpp  MonsterStats.h  MovementBackup.h  Player.cpp  Player.h  PlayerProxy.cpp  PlayerProxy.h  PlayerStats.cpp  PlayerStats.h
serverSide/Exceptions/: InexistentPlayerException.h  UnavailablePlayerException.h
serverSide/Game/: CMakeLists.txt  Game.cpp  Game.h  MonstersFactory.cpp  MonstersFactory.h  ResurrectData.h  ShouldMonsterBeRemoved.h  ShouldPlayerBeRevived.cpp  ShouldPlayerBeRevived.h
serverSide/Game/Events/: Attack.cpp  (+33 more)
serverSide/Items/: CMakeLists.txt  Inventory.cpp  Inventory.h  Item.h  ItemData.h  ItemsFactory.cpp  ItemsFactory.h  UseReturnData.h
serverSide/Map/: CMakeLists.txt  Coordinate.h  Map.cpp  Map.h  Tile.cpp  Tile.h
serverSide/Persistance/: CMakeLists.txt  PlayerFilePosition.h  PlayerIndexFile.cpp  PlayerIndexFile.h  PlayerSaveFile.cpp  PlayerSaveFile.h  SaveFileManager.cpp  SaveFileManager.h
serverSide/Persistence/: CMakeLists.txt  PlayerIndexFile.cpp  PlayerIndexFile.h  SaveFileManager.cpp
serverSide/Server/: ArgentumServer.cpp  ArgentumServer.h  ArgentumServerSide.cpp  ArgentumServerSide.h  CMakeLists.txt  ClientAccepter.cpp  ClientAccepter.h  ClientHandler.cpp  ClientHandler.h  ClientsMonitor.cpp  ClientsMonitor.h  NonModifiableConstants.h  PlayerData.hpp  PlayerManager.cpp  PlayerManager.h  ServerMonitor.cpp  ServerMonitor.h  ServerProtocol.cpp  ServerProtocol.h
serverSide/Tests/: CMakeLists.txt  EntityTests.cpp  GameTests.cpp  GameTests.h  ItemTests.cpp  MapTests.cpp  catch.hpp  entity_tests.cpp  item_tests.cpp
(+367 files in other folders)
